--- a/catalog.html
+++ b/catalog.html
@@ -2,57 +2,57 @@
 layout: page
 title: Security Control Catalog
 quick_links:
-- url: .\#AC
+- url: \#AC
   title: Access Control
-- url: .\#AP
+- url: \#AP
   title: Authority and Purpose
-- url: .\#AR
+- url: \#AR
   title: Accountability, Audit and Risk Management
-- url: .\#AT
+- url: \#AT
   title: Awareness and Training
-- url: .\#AU
+- url: \#AU
   title: Audit and Accountability
-- url: .\#CA
+- url: \#CA
   title: Security Assessment and Authorization
-- url: .\#CM
+- url: \#CM
   title: Configuration Management
-- url: .\#CP
+- url: \#CP
   title: Contingency Planning
-- url: .\#DI
+- url: \#DI
   title: Data Quality and Integrity
-- url: .\#DM
+- url: \#DM
   title: Data Minimization and Retention
-- url: .\#IA
+- url: \#IA
   title: Identification and Authentication
-- url: .\#IP
+- url: \#IP
   title: Individual Participation and Redress
-- url: .\#IR
+- url: \#IR
   title: Incident Response
-- url: .\#MA
+- url: \#MA
   title: Maintenance
-- url: .\#MP
+- url: \#MP
   title: Media Protection
-- url: .\#PE
+- url: \#PE
   title: Physical and Environmental Protection
-- url: .\#PL
+- url: \#PL
   title: Planning
-- url: .\#PM
+- url: \#PM
   title: Program Management
-- url: .\#PS
+- url: \#PS
   title: Personnel Security
-- url: .\#RA
+- url: \#RA
   title: Risk Assessment
-- url: .\#SA
+- url: \#SA
   title: System and Services Acquisition
-- url: .\#SC
+- url: \#SC
   title: System and Communications Protection
-- url: .\#SE
+- url: \#SE
   title: Security
-- url: .\#SI
+- url: \#SI
   title: System and Information Integrity
-- url: .\#TR
+- url: \#TR
   title: Transparency
-- url: .\#UL
+- url: \#UL
   title: Use Limitation
 ---
 
@@ -61,7 +61,7 @@ quick_links:
   information security in accordance with the state’s Information Security Standards
   for Institutions of Higher Education found in Title 1, Chapter 202, Texas
   Administrative Code (TAC 202). For more information, visit the
-  <a href="/policies">Policy and Standards</a> page.</p>
+  <a href="/policies.html">Policy and Standards</a> page.</p>
 
 <hr />
 
@@ -81,7 +81,7 @@ quick_links:
 {% assign family = control.Category.Item %}
 {% endif %}
   <tr class="catalog_control_entry">
-    <td><a href="/controls/{{ control.Procedure_ID }}">{{ control.Procedure_ID }}</a></td>
+    <td><a href="controls/{{ control.Procedure_ID }}.html">{{ control.Procedure_ID }}</a></td>
     <td>{{ control.Procedure_Name }}</td>
     <td>{{ control.NIST_Priority.Item }}</td>
   </tr>
