Add page name to catalog index

--- a/catalog.html
+++ b/catalog.html
@@ -2,57 +2,57 @@
 layout: page
 title: Security Control Catalog
 quick_links:
-- url: .\#AC
+- url: catalog.html\#AC
   title: Access Control
-- url: .\#AP
+- url: catalog.html\#AP
   title: Authority and Purpose
-- url: .\#AR
+- url: catalog.html\#AR
   title: Accountability, Audit and Risk Management
-- url: .\#AT
+- url: catalog.html\#AT
   title: Awareness and Training
-- url: .\#AU
+- url: catalog.html\#AU
   title: Audit and Accountability
-- url: .\#CA
+- url: catalog.html\#CA
   title: Security Assessment and Authorization
-- url: .\#CM
+- url: catalog.html\#CM
   title: Configuration Management
-- url: .\#CP
+- url: catalog.html\#CP
   title: Contingency Planning
-- url: .\#DI
+- url: catalog.html\#DI
   title: Data Quality and Integrity
-- url: .\#DM
+- url: catalog.html\#DM
   title: Data Minimization and Retention
-- url: .\#IA
+- url: catalog.html\#IA
   title: Identification and Authentication
-- url: .\#IP
+- url: catalog.html\#IP
   title: Individual Participation and Redress
-- url: .\#IR
+- url: catalog.html\#IR
   title: Incident Response
-- url: .\#MA
+- url: catalog.html\#MA
   title: Maintenance
-- url: .\#MP
+- url: catalog.html\#MP
   title: Media Protection
-- url: .\#PE
+- url: catalog.html\#PE
   title: Physical and Environmental Protection
-- url: .\#PL
+- url: catalog.html\#PL
   title: Planning
-- url: .\#PM
+- url: catalog.html\#PM
   title: Program Management
-- url: .\#PS
+- url: catalog.html\#PS
   title: Personnel Security
-- url: .\#RA
+- url: catalog.html\#RA
   title: Risk Assessment
-- url: .\#SA
+- url: catalog.html\#SA
   title: System and Services Acquisition
-- url: .\#SC
+- url: catalog.html\#SC
   title: System and Communications Protection
-- url: .\#SE
+- url: catalog.html\#SE
   title: Security
-- url: .\#SI
+- url: catalog.html\#SI
   title: System and Information Integrity
-- url: .\#TR
+- url: catalog.html\#TR
   title: Transparency
-- url: .\#UL
+- url: catalog.html\#UL
   title: Use Limitation
 ---
 
