--- a/catalog.html
+++ b/catalog.html
@@ -2,57 +2,57 @@
 layout: page
 title: Security Control Catalog
 quick_links:
-- url: catalog.html\#AC
+- url: \#AC
   title: Access Control
-- url: catalog.html\#AP
+- url: \#AP
   title: Authority and Purpose
-- url: catalog.html\#AR
+- url: \#AR
   title: Accountability, Audit and Risk Management
-- url: catalog.html\#AT
+- url: \#AT
   title: Awareness and Training
-- url: catalog.html\#AU
+- url: \#AU
   title: Audit and Accountability
-- url: catalog.html\#CA
+- url: \#CA
   title: Security Assessment and Authorization
-- url: catalog.html\#CM
+- url: \#CM
   title: Configuration Management
-- url: catalog.html\#CP
+- url: \#CP
   title: Contingency Planning
-- url: catalog.html\#DI
+- url: \#DI
   title: Data Quality and Integrity
-- url: catalog.html\#DM
+- url: \#DM
   title: Data Minimization and Retention
-- url: catalog.html\#IA
+- url: \#IA
   title: Identification and Authentication
-- url: catalog.html\#IP
+- url: \#IP
   title: Individual Participation and Redress
-- url: catalog.html\#IR
+- url: \#IR
   title: Incident Response
-- url: catalog.html\#MA
+- url: \#MA
   title: Maintenance
-- url: catalog.html\#MP
+- url: \#MP
   title: Media Protection
-- url: catalog.html\#PE
+- url: \#PE
   title: Physical and Environmental Protection
-- url: catalog.html\#PL
+- url: \#PL
   title: Planning
-- url: catalog.html\#PM
+- url: \#PM
   title: Program Management
-- url: catalog.html\#PS
+- url: \#PS
   title: Personnel Security
-- url: catalog.html\#RA
+- url: \#RA
   title: Risk Assessment
-- url: catalog.html\#SA
+- url: \#SA
   title: System and Services Acquisition
-- url: catalog.html\#SC
+- url: \#SC
   title: System and Communications Protection
-- url: catalog.html\#SE
+- url: \#SE
   title: Security
-- url: catalog.html\#SI
+- url: \#SI
   title: System and Information Integrity
-- url: catalog.html\#TR
+- url: \#TR
   title: Transparency
-- url: catalog.html\#UL
+- url: \#UL
   title: Use Limitation
 ---
 
