Change search layout

--- a/catalog-search.html
+++ b/catalog-search.html
@@ -14,4 +14,4 @@ title: Security Control Catalog Search Results
     s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<gcse:searchresults-only></gcse:searchresults-only>
+<gcse:search></gcse:search>
