--- a/catalog-itpro.html
+++ b/catalog-itpro.html
@@ -1,6 +1,6 @@
 ---
 layout: catalog
-title: Security Control Catalog for IT Professionals
+title: Security Controls Catalog for IT Professionals
 controls:
 - AC-01-727
 - AU-01-727
