--- a/catalog-owner.html
+++ b/catalog-owner.html
@@ -1,6 +1,6 @@
 ---
 layout: catalog
-title: Security Control Catalog for Information Resource Owners
+title: Security Controls Catalog for Information Resource Owners
 controls:
 - AC-01-727
 - AU-01-727
