--- a/catalog-required.html
+++ b/catalog-required.html
@@ -1,6 +1,6 @@
 ---
 layout: catalog
-title: Security Control Catalog of Required Controls
+title: Security Controls Catalog of Statewide Required Controls
 controls:
 - AC-01-727
 - AC-02-727
