--- a/catalog-user.html
+++ b/catalog-user.html
@@ -1,6 +1,6 @@
 ---
 layout: catalog
-title: Security Control Catalog for Users
+title: Security Controls Catalog for Users
 controls:
 - AC-01-727
 - AU-01-727
