--- a/catalog-custodian.html
+++ b/catalog-custodian.html
@@ -1,6 +1,6 @@
 ---
 layout: catalog
-title: Security Control Catalog for Information Resource Custodians
+title: Security Controls Catalog for Information Resource Custodians
 controls:
 - AC-01-727
 - AU-01-727
