--- a/catalog-researcher.html
+++ b/catalog-researcher.html
@@ -1,6 +1,6 @@
 ---
 layout: catalog
-title: Security Control Catalog for Researchers
+title: Security Controls Catalog for Researchers
 controls:
 - AC-01-727
 - AU-01-727
