Add line break for disclaimer

--- a/catalog-cui.html
+++ b/catalog-cui.html
@@ -129,4 +129,6 @@ controls:
 ---
 {% include catalog.html %}
 
-<p><em>Disclaimer:</em> NIST SP 800-171 contains many security controls that are enhancements of the security controls listed above, which are not included in the Texas Security Control Standards Catalog. As TTI publishes control enhancements to its controls catalog, they will be reflected in the list above.</p>
+<br />
+
+<p><strong>Disclaimer:</strong> NIST SP 800-171 contains many security controls that are enhancements of the security controls listed above, which are not included in the Texas Security Control Standards Catalog. As TTI publishes control enhancements to its controls catalog, they will be reflected in the list above.</p>
