Move files back to old format

--- a/catalog.html
+++ b/catalog.html
@@ -1,1 +1,5 @@
-<meta http-equiv="Refresh" content="0;/catalog" />
+---
+layout: catalog
+title: Security Controls Catalog
+---
+{% include catalog.html %}
