--- a/catalog/mod.html
+++ b/catalog/mod.html
@@ -1,6 +1,6 @@
 ---
 layout: catalog
-title: Security Controls Catalog of HIGH Baseline Controls
+title: Security Controls Catalog of MODERATE Baseline Controls
 controls:
 - AC-01-727
 - AC-02-727
